# kill-process-mcp

./: .gitignore  README.md  RELEASE_NOTES.md  kill_process_mcp.py  pyproject.toml
